--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
   
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_cacheOverride=1629532235608" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""><link href="https://fonts.googleapis.com/css2?family=Eczar&amp;family=KoHo:wght@300&amp;display=swap&amp;_cacheOverride=1629532235610" rel="stylesheet"><link rel="stylesheet" href="http://127.0.0.1:54237/design.css?_cacheOverride=1629532235614"><link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400&amp;_cacheOverride=1629532235615" rel="stylesheet" type="text/css"></head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_cacheOverride=1629532235608" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""><link href="https://fonts.googleapis.com/css2?family=Eczar&amp;family=KoHo:wght@300&amp;display=swap&amp;_cacheOverride=1629532235610" rel="stylesheet"><link rel="stylesheet" href="http://127.0.0.1:54237/design.css?_cacheOverride=1629532235614"><link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400&amp;_cacheOverride=1629532235615" rel="stylesheet" type="text/css"></head>
+  <link rel="shortcut icon" href="LineHoverStyles-main/favicon.ico">
+  <link rel="stylesheet" href="https://use.typekit.net/hph2pnz.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+
 <body>
-  <div class="arrow-btn">
+<main>
+    <div class="arrow-btn">
     <a href="#"><span class="fa fa-angle-up"></span></a>
 </div>
   <nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top m-0 mb-0" style="background-color: crimson !important; border-radius: 5px; min-height: 100px!important;">
       <div class="container-fluid px-2">
-        <a class="navbar-brand" style="font-family: 'Eczar', serif;
+        <a class="navbar-brand link link--dia" style="font-family: 'Eczar', serif;
                                       font-weight: 700;
                                       font-size: 1.8rem;
                                       padding: 0 5px;
@@ -36,10 +41,13 @@
               <a class="nav-link active" style="color: aliceblue;" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item mx-4">
-              <a class="nav-link " style="color: aliceblue;" aria-current="page" href="#">About Me</a>
+              <a class="nav-link " style="color: aliceblue;" aria-current="page" href="#about">About Me</a>
             </li>
             <li class="nav-item mx-4">
-              <a class="nav-link " style="color: aliceblue;" aria-current="page" href="#">Contact</a>
+              <a class="nav-link " style="color: aliceblue;" aria-current="page" href="#work">Work</a>
+            </li>
+            <li class="nav-item mx-4">
+              <a class="nav-link " style="color: aliceblue;" aria-current="page" href="#footer">Contact</a>
             </li>
           </ul>
         </div>
@@ -69,7 +77,7 @@
             <div class="column right">
                 <div class="text">I'm Shivesh and I'm a <span>Web Developer</span></div>
                 <p>Well , My name is Shivesh Chaturvedi currently a 2nd year student pursuing Bachelors in <b>Mechanical Engineering</b> from <b>Indian Institute of Technolgy, Kaharagpur</b>. Highly Motivated and Enthusiast about my work and skills which I'm learning </p>
-                <a href="image/Resume.pdf">Download Resume</a>
+                <a href="Shivesh _CV4.pdf">Download Resume</a>
             </div>
         </div>
     </div>
@@ -94,13 +102,66 @@
             </div>
             <div class="card">
                 <div class="box">
-                    <div class="text">Cloud Computing</div>
-                    <p>A cloud developer's is to work on cloud application development projects. Think of a cloud developer as a cloud engineer because they develop programs and software for the virtual and global cloud network. This presents an amazing opportunity.</p>
+                    <div class="text">Engineer</div>
+                    <p>Engineers, as practitioners of engineering, are professionals who invent, design, analyze, build and test machines, complex systems, structures, gadgets and materials to fulfill functional objectives and requirements while considering the limitations imposed by practicality, regulation, safety and cost.</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
+</main>
+<footer class="site-footer" id="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h6>About</h6>
+        Well I am Shivesh Chaturvedi. A Second year Mechanical Engineering students at IIT Kharagpur.<br>
+        Journey which i have followed has taught me many things. From my childhood i was interested in electronics and Technology. And after my highschool i have tried many things in my life, and learnt a lot. Specially now i know what I am good at, and what is beyond my scope.
+        I beleive that best way of learning is through experiments.
+       </div>
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Link to other Websites</h6>
+        <ul class="footer-links">
+          <li><a href="https://dark-venom-16.github.io/">Portfolio</a></li>
+          <li><a href="https://dark-venom-16.github.io/shiveshktj">Ktj_Workshop</a></li>
+          <li><a href="https://dark-venom-16.github.io/amweb">Photo Gallery</a></li>
+          <li><a href="https://dark-venom-16.github.io/puzzler">Puzzler</a></li>
+
+        </ul>
+      </div>
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Quick Links</h6>
+        <ul class="footer-links">
+          <li><a href="https://dark-venom-16.github.io/contact.html">Contact ME</a></li>
+          <li><a href="https://dark-venom-16.github.io/about.html">About Me</a></li>      
+          <li><a href="#" aria-disabled="true">Privacy Policy</a></li>
+        </ul>
+      </div>
+    </div>
+    <hr>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-sm-6 col-xs-12">
+        <p class="copyright-text">Copyright © 2021 All Rights Reserved by Shivesh Chaturvedi.
+     
+        </p>
+      </div>
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <ul class="social-icons">
+          <li><a class="facebook" href="https://m.facebook.com/shivam.chaubey.524596" target="_blank"><i class="fab fa-facebook" id="icon"></i></a> </li>
+          <li><a class="instagram" href="https://instagram.com/shivam_162001?igshid=12dq9t32zqwrv" target="_blank"><i class="fab fa-instagram" aria-hidden="true" id="icon"></i></a></li>
+          <li><a class="github" href="https://github.com/DarK-VEnOM-16" target="_blank"><i class="fab fa-github" aria-hidden="true" id="icon"></i></a></li>
+          <li><a class="linkedin" href="https://www.linkedin.com/in/shivesh-chaturvedi-14ab321b3" target="_blank"><i class="fab fa-linkedin" id="icon"></i></a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   
