--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="arrow-btn">
     <a href="#"><span class="fa fa-angle-up"></span></a>
 </div>
-  <nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top m-0 mb-0" style="background-color: crimson !important; border-radius: 5px; min-height: 100px!important;">
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top m-0 mb-0" style="background-color: crimson !important; border-radius: 5px; min-height: 100px!important;" id="navedit">
       <div class="container-fluid px-2">
         <a class="navbar-brand link link--dia" style="font-family: 'Eczar', serif;
                                       font-weight: 700;
